fix bug selector length too short

--- a/webview_ui/src/css/load_flowsheet_view.module.css
+++ b/webview_ui/src/css/load_flowsheet_view.module.css
@@ -17,7 +17,8 @@
 
 .selectBox {
     flex: 1;
-    max-width: 300px;
+    width: 100%;
+    max-width: 100%;
     height: 30px;
     padding: 0 10px;
     background-color: var(--vscode-input-background);
@@ -25,6 +26,7 @@
     border: 1px solid var(--vscode-input-border, transparent);
     border-radius: 4px;
     font-family: inherit;
+    box-sizing: border-box;
 }
 
 .actionGroup {
